<?xml version="1.0" encoding="utf-8"?>
<!--android:background="@drawable/texture_background"-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_alternates_bold_font"
        android:text="@string/app_name"
        android:textColor="@color/yellow"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/toolbar"
        app:cardBackgroundColor="@color/toolbar"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Sign_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/log_info"
                android:textColor="@color/pink"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/log_txt"
                android:textColor="@color/nonactive_btn"
                app:layout_constraintBottom_toTopOf="@+id/pass_out"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Sign_txt" />

            <TextView
                android:id="@+id/pass_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_alternates_bold_font"
                android:text="@string/pas_txt"
                android:textColor="@color/nonactive_btn"
                app:layout_constraintBottom_toTopOf="@+id/login_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_login" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/pink"
                android:fontFamily="@font/montserrat_alternates_bold_font"
                android:text="@string/sign"
                android:textColor="@color/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vk_btn"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <Button
                android:id="@+id/vk_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/montserrat_alternates_bold_font"
                android:text="@string/tg"
                android:textColor="@color/background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <EditText
                android:id="@+id/input_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="true"
                android:fontFamily="@font/montserrat_font"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/login_out"
                app:layout_constraintTop_toBottomOf="@+id/Sign_txt"
                tools:ignore="LabelFor">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="true"
                android:ems="10"
                android:fontFamily="@font/montserrat_font"
                android:inputType="textPassword"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pass_out"
                app:layout_constraintTop_toBottomOf="@+id/input_login"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/sign_up"
                android:textColor="@color/aqua"
                app:layout_constraintBottom_toTopOf="@+id/continue_without_acc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vk_btn" />

            <TextView
                android:id="@+id/continue_without_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_font"
                android:text="@string/continue_without_acc"
                android:textColor="@color/aqua"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>